@@ -11,6 +11,7 @@
 
 Changes:
 --------
+- 2017/12/04 (2.00.6) - Added formated string tooltip widget
 - 2017/11/18 (2.00.5) - Fixed window becoming hidden with flag NK_WINDOW_NO_INPUT
 - 2017/11/15 (2.00.4) - Fixed font merging
 - 2017/11/07 (2.00.3) - Fixed window size and position modifier functions
